2025-11-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/SpookyV2.cpp (SpookyHash::Update): Add a cast suggested by
	Brian D. Ripley in email as arm64 showed a SAN warning

2025-11-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.38

2025-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* docs/: Regenerated using altdoc with mkdocs-material
	* .github/altdoc: Added and customized
	* inst/CITATION: Added as in-container use of citation() with
	defaults appears to drop both doi and url entries

	* README.md: Use R Project URL for GPL-2 link in badge

	* man/digest.Rd: Edit around disappearing ssh certificate of the site
	of Aaron Gifford and link to alternate source of his code
	* man/hmac.Rd: Idem

2025-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* R/digest.R (digest): Additional #nocov
	* R/vdigest.R: (non_streaming_digest): Idem

	* src/digest.c (digest): Additional #nocov blocks

2025-08-25  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Use codecov token

	* .codecov.yml (ignore): Add a few more files

2025-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Add rbenchmark as used in demo/

2025-06-04  Sergey Fedorov  <barracuda@macos-powerpc.org>

	* src/digest.c: Fix endianness handling

2025-06-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2025-06-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/blake3_portability.h: New header to skip hardware accelerated
	modes on arm64 and amd64 available upstream but not included here

	* src/blake3.h: Include new header to guide blake3 compilation

2025-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/blake3.c: Sync with updated upstream version
	* src/blake3_dispatch.c: Idem
	* src/blake3.h: Idem
	* src/blake3_impl/h: Idem
	* src/blake3_portable.c: Idem

2025-01-07  Thierry Onkelinx <thierry.onkelinx@inbo.be>
